# sports_predictor

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
django_sports_predictor/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
django_sports_predictor/migrations/: 0001_initial.py  0002_rename_vote_choice_votes.py  0003_rename_question_sport_rename_question_choice_sport_and_more.py
django_sports_predictor/static/polls/: admin_override.css  style.css
django_sports_predictor/templates/admin/: base_site.html
django_sports_predictor/templates/polls/: detail.html  index.html  results.html
mysite/: settings.py  urls.py
