[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name = "django-sports-predictor"
version = "0.1.0"
description = "A resuable Django app for sport match prediction voting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Kelvin Ihezue" }
]
dependencies = [
    "Django>=4.2"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

